testsuite/tests/properties/invalid_block_expr/misplaced_expr/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(): Bool = {
        false
        val _ = 2;
    }
}
